# kafka_learnings

./: =  README.md  docker-compose.yaml  pyproject.toml
ad_stream_producer/: __init__.py  config.py  kafka_producer.py  run_producer.py  schema.py
consumer/: kafka_consumer.py
data_generator/: event_generator.py
kafka_ad_stream_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
metrics/: metrics.py
output/ads_events_parquet/: .part-00000-f199444d-27dd-4588-a943-bb56dfc0a086-c000.snappy.parquet.crc  .part-00001-f199444d-27dd-4588-a943-bb56dfc0a086-c000.snappy.parquet.crc  .part-00002-f199444d-27dd-4588-a943-bb56dfc0a086-c000.snappy.parquet.crc  part-00000-f199444d-27dd-4588-a943-bb56dfc0a086-c000.snappy.parquet  part-00001-f199444d-27dd-4588-a943-bb56dfc0a086-c000.snappy.parquet  part-00002-f199444d-27dd-4588-a943-bb56dfc0a086-c000.snappy.parquet
output/checkpoints_final_robust/: .metadata.crc  metadata
output/checkpoints_final_robust/offsets/: .350.crc  .351.crc  .352.crc  .353.crc  .354.crc  .355.crc  .356.crc  .357.crc  .358.crc  .359.crc  .360.crc  .361.crc  .362.crc  .363.crc  .364.crc  .365.crc  .366.crc  .367.crc  .368.crc  .369.crc  .370.crc  .371.crc  .372.crc  .373.crc  .374.crc  .375.crc  .376.crc  .377.crc  .378.crc  .379.crc  .380.crc  .381.crc  .382.crc  .383.crc  .384.crc  .385.crc  .386.crc  .387.crc  .388.crc  .389.crc  (+162 more)
output/checkpoints_final_robust/sources/0/: .0.crc  0
schema/: __init__.py  ad_event_update.avsc
